<resources>
    <string name="app_name">NumberGo</string>

    <string name="numbergo">Number Go</string>
    <string name="levels">Levels</string>
    <string name="store">Store</string>
    <string name="settings">Settings</string>

    <string name="start">Start</string>

    <string name="left">left</string>
    <string name="right">right</string>
    <string name="up">up</string>
    <string name="down">down</string>
    <string name="block">block</string>
    <string name="target">target</string>

    <string name="level_complete">Level Complete</string>
    <string name="try_again">Try Again</string>

    <string name="next">Next</string>
    <string name="restart">Restart</string>
    <string name="back">Back</string>
    <string name="home">Home</string>

    <string name="level">Level %1$s</string>

    <string name="failed_to_solve_puzzle_toast">Failed To Solve</string>

    <string name="end">End</string>

    <string name="l">L</string>
    <string name="r">R</string>
    <string name="u">U</string>
    <string name="d">D</string>
</resources>